--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "nodemon": "^2.0.4"
   },
   "dependencies": {
-    "apollo-server": "^2.16.1",
+    "apollo-server-express": "^2.16.1",
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
     "mongoose": "^5.9.26"
