--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.16.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
     "mongoose": "^5.9.26"
