--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-router-modal": "^1.5.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
